# Mine-Sweeper

./: CMakeLists.txt  build.sh  run.sh  test.sh
src/: main.cpp
src/core/: CMakeLists.txt  CMakeSources.txt  controller.cpp  tile_model.cpp
src/core/include/: controller.h  tile_model.h
src/qml/: main.qml
